testsuite/tests/annotations/should_fail/annfail04.stderr
annfail04.hs:14:12: error: [GHC-28914]
    • Stage error: instance for ‘Thing
                                   Int’ is bound at stage {1} but used at stage 0
    • In the annotation: {-# ANN f (thing :: Int) #-}

